# django-chat

./: .env-example  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  readme.md  users.json
chat/: admin.py  consumers.py  models.py  serializers.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_alter_messagemodel_user.py
chat/test/: test_model.py  test_view.py
chat/tests/: test_model.py
django_chat/: settings.py  urls.py
users/: admin.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/test/: test_user.py  test_view.py
users/tests/: tests.py  user-tests.py
